# Azul_CLI

./: .gitignore  AAAA.txt.bak  BACKEND_ARCHITECTURE.md  INSTALLATION.md  LAUNCHER_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_THIS_FIRST.md  SETUP_CHANGES.md  activate_azul.sh  api_logic_ex.md  azul.py  azul_launcher.sh  build-global.sh  config.json  fix_gpu_performance.sh  index.html  local_ai_process.md  memory.md  morgan_freeman_story.html  package-lock.json  package.json  plan.md  pyproject.toml  python_cheatsheet.html  python_functions.html  requirements.txt  setup.py  setup.sh  start_from_scratch.md  startup.txt  test_launcher.sh  tsconfig.base.json
azul/: __init__.py  agent.py  agent_state.py  agentic_loop.py  cli.py  command_executor.py  command_parser.py  editor.py  env_checker.py  file_handler.py  file_monitor.py  formatter.py  intent_filter.py  llama_client.py  metrics.py  ollama_client.py  permissions.py  repl.py  response_parser.py  sandbox.py  session_manager.py  tool_parser.py  tools.py  tree_generator.py  tui.py
azul-backend/: README.md  pyproject.toml
azul-backend/src/azul_core/: __init__.py  agent.py  config.py  llm.py  protocol.py  server.py  tools.py
azul-ui/: package.json  tsconfig.json
azul-ui/src/: App.tsx  main.tsx
azul-ui/src/components/: LogView.tsx  StatusBar.tsx  TodoDrawer.tsx  UserInput.tsx
azul/commands/: __init__.py  handlers.py
azul/config/: __init__.py  manager.py
azul/models/: .gitkeep
azul/rag/: __init__.py  augmenter.py  chunker.py  indexer.py  metrics.py  retriever.py  vector_db.py
azul_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
azul_env/: pyvenv.cfg
