[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azul"
version = "0.1.0"
description = "An agentic AI coding assistant using local LLMs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "llama-cpp-python>=0.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-community>=0.0.20",
    "rich>=13.0.0",
]

[project.scripts]
azul = "azul.cli:main"

[tool.setuptools]
packages = ["azul", "azul.config"]

